--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "release": "standard-version"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -21,6 +22,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.1.6",
+    "standard-version": "^9.5.0",
     "typescript": "4.7.3"
   }
 }
