--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "release": "standard-version"
+    "version": "standard-version"
   },
   "dependencies": {
     "axios": "^0.27.2",
