fix: fix trigger commit

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "release": "standard-version --no-verify",
+    "release": "standard-version --skip.commit",
     "prepare": "husky install"
   },
   "dependencies": {
