--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "poc-swr",
-  "version": "5.2.4",
+  "version": "5.2.5",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "release": "standard-version --skip.commit",
-    "prepare": "husky install"
+    "release": "standard-version --skip.commit"
+  },
+  "lint-staged": {
+    "*": "release"
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "lint-staged": "^13.0.3",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -23,7 +26,6 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.5.0",
     "eslint-config-next": "12.1.6",
-    "husky": "^8.0.1",
     "standard-version": "^9.5.0",
     "typescript": "4.7.3"
   }
