fix: added skip commit

--- a/.github/workflows/semver.yml
+++ b/.github/workflows/semver.yml
@@ -16,5 +16,10 @@ jobs:
           cache: yarn
       - name: Install dependencies
         run: yarn install
+      - name: Setup git config
+        run: |
+          # setup the username and email. I tend to use 'GitHub Actions Bot' with no email by default
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"      
       - name:  Increment version
         run: yarn release
